# zosma-cowork

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  MVP-ROADMAP.md  PRODUCT.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh.md  audit-ci.jsonc  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.aur/: .SRCINFO  PKGBUILD
.github/workflows/: ci.yml  notify-homebrew.yml  release.yml  security.yml  staging-build.yml  update-aur.yml  update-winget.yml
agent-sidecar/: package-lock.json  package.json  tsconfig.json  vendor.lock.json  vitest.config.ts
agent-sidecar/scripts/: fetch-vendor.mjs  vendor-latest.mjs
agent-sidecar/src/: auth-seed.test.ts  auth-seed.ts  event-bus.ts  (+24 more)
docs/: design-studio-roadmap.md  extensions-tab-design.md  github-integration-plan.md  integrations-roadmap.md  node-bundling-plan.md  phase-6-mobile-unification-scope.md
mobile/: index.html
scripts/: ensure-dev-resources.mjs  generate-winget-manifest.sh  inline-token-style-baseline.json  prebuild.mjs
security/: APPLE_CERTS.md  UPDATER_KEYS.md  WINDOWS_CERTS.md
src/: App.css  App.tsx  main.tsx
src-sidecar/: sidecar.mjs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore  node  node-arm64  node-x64
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: fetch-gh.mjs  fetch-git.mjs  fetch-node.mjs
src-tauri/src/: analytics.rs  lib.rs
(+228 files in other folders)
