[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/zosmaai/zosma-cowork"

[profile.dev]
# Faster incremental rebuilds during development.
opt-level = 0
debug = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
